# babel

./: 8.2.1.1-createVM-New.po  README.md  ps.sh  pyproject.toml  repos.json  test.py  zh-audit.config.json
docs/: icm-user-guide-ppt.md
examples/: scan_policy.sample.json
resources/: terminology.xlsx  国际化专业术语词典.xlsx
results/: annotations.json  app_state.json  summary.json
results/20260310-140432/: summary.json
results/20260310-140846/: summary.json
src/zh_audit/: __init__.py  __main__.py  annotations.py  app_server.py  app_state.py  app_ui.py  candidate_validation.py  classifier.py  cli.py  config.py  extractor.py  model_client.py  model_execution.py  models.py  pipeline.py  plain_translation_prompts.py  po_file.py  po_rst_protection.py  po_translation_workflow.py  properties_file.py  remediation_state.py  report.py  report_embed.py  review_server.py  session_store.py  single_translation.py  sql_translation_workflow.py  terminology_xlsx.py  translation_workflow.py  utils.py  validation.py
tests/: test_annotations.py  test_app_server.py  test_app_state.py  test_candidate_validation.py  test_cli.py  test_model_client.py  test_po_file.py  test_po_translation_workflow.py  test_python36_compat.py  test_single_translation.py  test_smoke.py  test_sql_translation_workflow.py  test_translation_workflow.py  test_validation.py
tests/fixtures/: repos.test.json
tests/fixtures/repo_a/: Jekinsfiles.slim  README.md
tests/fixtures/repo_a/config/: app.yaml  i18n.messages.properties
tests/fixtures/repo_a/mapper/: SysJobLogMapper.xml
tests/fixtures/repo_a/sql/: demo.sql
(+14 files in other folders)
